[package]
name = "iptv-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "glow"] }
egui = "0.29"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"

# reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
sevenz-rust = "0.6"

windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }
raw-window-handle = "0.6"
